--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -12,7 +12,7 @@ on:
     # Runs every Friday at midnight
     # - cron:  '0 0 * * FRI'
     # Runs every quarter (00:00 on day 1 every 3rd month)
-    - cron:  '0 0 1 */3 *'
+    # - cron:  '0 0 1 */3 *'
   # manual triggers
   workflow_dispatch:
 
