--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -12,9 +12,29 @@ on:
     # Runs every Friday at midnight
     # - cron:  '0 0 * * FRI'
     # Runs every quarter (00:00 on day 1 every 3rd month)
-    # - cron:  '0 0 1 */3 *'
+    - cron:  '0 0 1 */3 *'
   # manual triggers
   workflow_dispatch:
+    inputs:
+      homedrive:
+        description: 'The home drive on the machine'
+        required: true
+      logLevel:
+        description: 'Log level'
+        default: 'warning' 
+        type: choice
+        options:
+        - info
+        - warning
+        - debug 
+      tag:
+        description: 'Apply tag after successfull test run'
+        required: true 
+        type: boolean 
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: true
 
 jobs:
   MyFirstJob:
