--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -50,5 +50,14 @@ jobs:
       run: |
         echo "The repository ${{ github.repository }} contains the following ➥files:"
         tree
+    - name: Workflow Inputs
+      if: ${{ github.event_name == 'workflow_dispatch' }}
+      run: |
+        echo "Homedrive: ${{ inputs.homedrive }}"
+        echo "Log level: ${{ inputs.logLevel }}"
+        echo "Tag Source: ${{ inputs.tags }}"
+        echo "Environment: ${{ inputs.environment }}"
+        
+      
   
    
