--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -35,6 +35,12 @@ on:
         description: 'Environment to run tests against'
         type: environment
         required: true
+  # this manual trigger is through API calls and be used to trigger multiple workflows with the same event
+  # curl \ -X POST \ -H "Accept: application/vnd.github.v3+json" \ https://api.github.com/repos/{owner}/{repo}/dispatches \ -d '{"event_type":"event1"}'
+  # Another example {"event_type":"event1","client_payload":{"passed":false,"message":"Error: timeout"}}
+  repository_dispatch:
+    types: [event1, event2]
+  
 
 jobs:
   MyFirstJob:
@@ -50,13 +56,17 @@ jobs:
       run: |
         echo "The repository ${{ github.repository }} contains the following ➥files:"
         tree
-    - name: Workflow Inputs
+    - name: Manual trigger Workflow Inputs
       if: ${{ github.event_name == 'workflow_dispatch' }}
       run: |
         echo "Homedrive: ${{ inputs.homedrive }}"
         echo "Log level: ${{ inputs.logLevel }}"
         echo "Tag Source: ${{ inputs.tags }}"
         echo "Environment: ${{ inputs.environment }}"
+    - name: Manual trigger Repository Dispatch with additional payload namely client_payload in the object of event_type
+      if: ${{ github.event_name == 'repository_dispatch' }}
+      run: |
+        echo "Payload: ${{ toJSON(github.event.client_payload) }}"
         
       
   
