--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -89,6 +89,21 @@ jobs:
     needs: [MySecound_Parallel_Job, MyThird_Secound_parallel_sequence_Job,MyFirstJob]
     steps:
       - run: "echo Job: ${{ github.job }}"
+
+  Matrix_Job:
+    strategy:
+      fail-fast: false
+      max-parallel: 3
+      matrix:
+        os_version: [macos-latest, ubunutu-latest]
+        node_version: [12,14,16]
+    name: Matrix_Job
+    runs-on:  ${{matrix.os_version}}
+    needs: [MyFirstJob]
+    steps:
+      - uses: actions/setup-node@v4.2.0
+        with:
+          node-version: ${{matrix.node_version}}
     
       
   
