--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -88,7 +88,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: [MySecound_Parallel_Job, MyThird_Secound_parallel_sequence_Job,MyFirstJob]
     steps:
-      - run: "echo Job: ${{ github.job }}"
+      - run: |
+          echo "Job: ${{ github.job }}"
+          echo "::warning file=app.js,line=1,col=5,endColumn=7::Missing semicolon"
+          echo "::error file=app.js,line=1,col=5,endColumn=7::Error in app.js"
 
   Matrix_Job:
     strategy:
