--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -68,14 +68,32 @@ jobs:
       run: |
         echo "Payload: ${{ toJSON(github.event.client_payload) }}"
   
-  MySecound_Parallel_Job:
-    runs-on:  ubuntu-latest
+  MySecound_Secrets_Env_Variables_Parallel_Job:
+    runs-on: ubunutu-latest
     steps:
-    - run: "echo Job: ${{ github.job }}"
+      - name: Set color
+        id: color-generator
+        run: echo "SELECTED_COLOR=green" >> "$GITHUB_OUTPUT"
+      - name: Get color
+        run: echo "${{ steps.color-generator.outputs.SELECTED_COLOR }}"
+      - id: set_masked_secret
+        name : Generate, mask and output the secret
+        run: |
+           the_secret= $((RANDOM))
+           echo "::add-mask::$the_secret"
+           echo "the_secret" >> "$GITHUB_OUTPUT"
+      - name: Retrieve the secret
+        run: |
+           echo "the secret number is ${{steps.set_masked_secret.outputs.the_secret}}"
+      - name: Set the env variable
+        id: env-generator
+        run: echo "SELECTED_ENV=stage" >> "$GITHUB_ENV"
+      - name: Get the env variable
+        run: echo "${{ env.SELECTED_ENV }}"
     
   MyThird_Secound_parallel_sequence_Job:
     runs-on:  ubuntu-latest
-    needs: [MySecound_Parallel_Job]
+    needs: [MySecound_Secrets_Env_Variables_Parallel_Job]
     steps:
     - run: |
         #npm install
@@ -86,7 +104,7 @@ jobs:
 
   MyForth_sequence_Job:
     runs-on: ubuntu-latest
-    needs: [MySecound_Parallel_Job, MyThird_Secound_parallel_sequence_Job,MyFirstJob]
+    needs: [MySecound_Secrets_Env_Variables_Parallel_Job, MyThird_Secound_parallel_sequence_Job,MyFirstJob]
     steps:
       - run: |
           echo "Job: ${{ github.job }}"
@@ -107,33 +125,8 @@ jobs:
       - uses: actions/setup-node@v4.2.0
         with:
           node-version: ${{matrix.node_version}}
-  # Masking
-  Outputs_masking:
-    runs-on: ubunutu-latest
-    steps:
-      - name: Set color
-        id: color-generator
-        run: echo "SELECTED_COLOR=green" >> "$GITHUB_OUTPUT"
-      - name: Get color
-        run: echo "${{ steps.color-generator.outputs.SELECTED_COLOR }}"
-      - id: set_masked_secret
-        name : Generate, mask and output the secret
-        run: |
-           the_secret= $((RANDOM))
-           echo "::add-mask::$the_secret"
-           echo "the_secret" >> "$GITHUB_OUTPUT"
-      - name: Retrieve the secret
-        run: |
-           echo "the secret number is ${{steps.set_masked_secret.outputs.the_secret}}" 
-
-  adding_env_variables:
-    runs-on: ubunutu-latest
-    steps:
-      - name: Set the env variable
-        id: env-generator
-        run: echo "SELECTED_ENV=stage" >> "$GITHUB_ENV"
-      - name: Get the env variable
-        run: echo "${{ env.SELECTED_ENV }}"
+    
+      
     
       
   
