--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -48,6 +48,9 @@ jobs:
 
     steps:
     - run: echo "Hello world!"
+    - run: echo '### Hello world! :rocket:' >> $GITHUB_STEP_SUMMARY
+    - run: echo '### Love this feature! :medal_sports:' >> $GITHUB_STEP_SUMMARY
+    - run: echo '<h1>Great feature!</h1>' >> $GITHUB_STEP_SUMMAsRY
 
     - name: Checkout
       uses: actions/checkout@v4.2.2
