--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -50,7 +50,7 @@ jobs:
     - run: echo "Hello world!"
     - run: echo '### Hello world! :rocket:' >> $GITHUB_STEP_SUMMARY
     - run: echo '### Love this feature! :medal_sports:' >> $GITHUB_STEP_SUMMARY
-    - run: echo '<h1>Great feature!</h1>' >> $GITHUB_STEP_SUMMAsRY
+    - run: echo '<h1>Great feature!</h1>' >> $GITHUB_STEP_SUMMARY
 
     - name: Checkout
       uses: actions/checkout@v4.2.2
